﻿##########################################
官方网站：https://www.pbootcms.com
标签手册：https://www.pbootcms.com/docs.html
版权所有：hnaoyun.com
##########################################

PbootCMS V1.3.1 build 2018-11-14
1、优化在线升级功能；
2、修复表单Ajax提交返回状态码不正确问题；
3、优化会话层级目录创建，避免会话目录缺失导致登陆失败的情况；

PbootCMS V1.3.0 build 2018-11-12
1、优化会话创建机制,避免会话文件过多问题；
2、修复一些可能导致注入的安全问题(感谢topsec(zhan_ran)及CNVD的反馈)；
3、修复搜索结果无法按预期显示的的问题；
4、新增内容页、列表页404自动匹配的支持；
5、新增支持在根目录定义sn.html文件自定义免费授权码填写提示；
6、新增API通过scode来调用单篇内容；
7、新增[nav:rows]输出该菜单下内容数量；
8、新增[sort:rows]输出该栏目下内容数量；
9、新增[sort:toprows]输出顶级栏目下内容数量；
10、新增[sort:parentrows]输出父栏目下内容数量；
11、新增内置tags功能，不再需要扩展字段实现；
12、新增输出指定内容或栏目tags标签功能；
13、新增列表使用参数tags='*,*'过滤列表；
14、新增列表使用参数scode=*匹配全部栏目；
15、新增指定内容输出单页时支持scode来指定内容；
16、新增栏目独立seo标题设置字段[nav:title]；
17、新增开启iis\apache伪静态时自动拷贝伪静态规则；
18、新增后台内容列表百度站长推送及熊掌号推送；
19、新增多语言\区域绑定域名功能（站群系统）；
20、新增留言及表单记录调用时使用page=0关闭分页；
21、其他问题修复与优化。

PbootCMS V1.2.2 build 2018-10-12
1、修复自定义表单多选类型提交数据错误问题；
2、修复发送邮件设置完成不立即生效问题；
3、修复发送测试邮件不能正确返回状态的问题；
4、修复分页代码数字条省略号不准问题；
5、修复后台编辑器的一些问题；
6、修复自定义标签的图片不自适应多级目录问题;
7、修复使用mysql数据库时可能导致的安全问题；
8、修复列表筛选与指定分类列表冲突问题；
9、修复多次调用内容标签导致重复计算访问量问题;
10、大幅提高Sqlite数据库数据写入速度；
11、优化后台登陆错误处理机制；
12、优化数据列表排序方式；
13、新增模板嵌套引用的支持；
14、新增在线更新涉及数据库时自动备份数据库；
15、新增在线更新分支选择功能；
16、新增对指定代码块不做标签解析的标签；
17、新增列表多条件排序自定义任意组合的支持,如:order='istop desc,id asc'
18、新增MySQL数据库事务的支持；
19、新增自定义标签多行文本类型；
20、新增文章定时发布的支持；
21、其它问题修复与优化。

PbootCMS V1.2.1 build 2018-09-12
1、新增在线升级新版本红点提示；
2、新增程序部署到非根目录时虚拟目录大小写不区分；
3、新增表单提交频率安全检测；
4、调整程序非伪静态时不再显示html后缀；
5、调整程序留言表单外的自定义表单不再要求验证码；
6、修复上版本首页分页不正常问题；
7、优化完善默认模板;

PbootCMS V1.2.0 build 2018-09-04
1、系统优化及安全修复；
2、修复API搜索与页面实现不统一；
3、优化后台内容页栏目显示逻辑；
4、新增后台轮播、链接页面批量排序；
5、升级layui到最新版本；
6、新增列表标签isico、ispics、istop、isrecommend、isheadline调节参数；
7、新增面包屑连接符separatoriconc及indexicon参数设置字体图标class；
8、优化分页条代码；
9、新增内容截取时自动添加省略号；
10、基于bootstrap v4的全新默认模板正式上线；
11、修复在线更新浏览器兼容性问题；

PbootCMS V1.1.9 build 2018-08-17
1、系统优化及安全修复(重要)；
2、修复自定义表单Mysql时添加失败问题；
3、修复后台模板一些小错误；
4、修复影响缓存效果的一些问题；
5、新增后台在线更新功能；
6、新增附件大小标签；
