@@ -72,7 +72,7 @@
 	                <div class="layui-form-item">
 	                     <label class="layui-form-label">绑定域名</label>
 	                     <div class="layui-input-block">
-	                     	<input type="text" name="domain"  placeholder="请输入需要绑定的域名，如：www.pbootcms.com" class="layui-input">
+	                     	<input type="text" name="domain"  placeholder="请不要填写重复的域名，不区分就不填！" class="layui-input">
 	                     </div>
 	                </div>
 	                
@@ -124,7 +124,7 @@
                 <div class="layui-form-item">
                      <label class="layui-form-label">绑定域名</label>
                      <div class="layui-input-block">
-                     	<input type="text" name="domain"  value="{$area->domain}" placeholder="请输入需要绑定的域名，如：www.pbootcms.com" class="layui-input">
+                     	<input type="text" name="domain"  value="{$area->domain}" placeholder="请不要填写重复的域名，不区分就不填！" class="layui-input">
                      </div>
                 </div>
                
