@@ -4,6 +4,11 @@
 版权所有：hnaoyun.com
 ##########################################
 
+PbootCMS V1.3.2 build 2018-11-16
+1、修复用户名验证规则不统一导致修改特殊字符后无法登陆问题；
+2、修复js无法获取到点赞及反对cookie的问题；
+3、修复content标签无法使用scode调取单页问题；
+
 PbootCMS V1.3.1 build 2018-11-14
 1、优化在线升级功能；
 2、修复表单Ajax提交返回状态码不正确问题；
